# conda_disable_init

./: README.md  conda_disable_init.py  pyproject.toml
recipe/: meta.yaml
